Add ChatGPT rewrite option

--- a/options.html
+++ b/options.html
@@ -9,6 +9,8 @@
 <h1 class="text-lg mb-2">PolyWrite Options</h1>
 <label class="block mb-1">API URL</label>
 <input id="api" class="border rounded w-full p-1"/>
+<label class="block mb-1 mt-2">OpenAI API Key</label>
+<input id="openai" class="border rounded w-full p-1"/>
 <script src="options.js"></script>
 </body>
 </html>
